--- a/spring-security-jwt/src/main/resources/application.properties
+++ b/spring-security-jwt/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://104.251.217.248:3306/secuirty
+spring.datasource.username=danny
+spring.datasource.password=Danny@123#
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
