--- a/spring-security-jwt/src/main/resources/application.properties
+++ b/spring-security-jwt/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://104.251.217.248:3306/secuirty
+spring.datasource.url=jdbc:mysql://104.251.217.248:3306/security
 spring.datasource.username=danny
 spring.datasource.password=Danny@123#
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.port=8090
+spring.profiles.active=swagger-enabled-for-qa
