--- a/spring-security-jwt/src/main/resources/application.properties
+++ b/spring-security-jwt/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://104.251.217.248:3306/security
 spring.datasource.username=danny
 spring.datasource.password=Danny@123#
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
-server.port=8090
+server.port=8091
 spring.profiles.active=swagger-enabled-for-qa
