--- a/spring-security-jwt/src/main/resources/application.properties
+++ b/spring-security-jwt/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.jpa.show-sql=true
 spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.port=8091
 spring.profiles.active=swagger-enabled-for-qa
+
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
+ 
+//For detailed logging during development
+ 
+logging.level.org.springframework=ERROR
+logging.level.com=ERROR
