--- a/spring-security-jwt/src/main/resources/application.properties
+++ b/spring-security-jwt/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.datasource.url=jdbc:mysql://104.251.217.248:3306/security
-spring.datasource.username=danny
-spring.datasource.password=Danny@123#
+spring.datasource.username=dannny
+spring.datasource.password=Dannyn@123#
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
 spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
-server.port=8091
+server.port=8080
 spring.profiles.active=swagger-enabled-for-qa
 
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
  
-//For detailed logging during development
+#For detailed logging during development
  
 logging.level.org.springframework=ERROR
 logging.level.com=ERROR
