--- a/spring-security-jwt/src/main/resources/application.properties
+++ b/spring-security-jwt/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=Dannyn@123#
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
 spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
-server.port=8080
+#server.port=8080
 spring.profiles.active=swagger-enabled-for-qa
 
 spring.mvc.view.prefix=/WEB-INF/view/
